sqlxo_macros/tests/try/err/duplicate_key.stderr
error: duplicate key `table_name`
 --> tests/try/err/duplicate_key.rs:5:27
  |
5 | #[sqlxo(table_name = "a", table_name = "b")]
  |                           ^^^^^^^^^^^^^^^^
